# internal/app/entity/transaction.go
@@ -10,10 +10,20 @@ type (
 	Transaction struct {
 		ID             uuid.UUID
 		OrganizationID uuid.UUID
+		GroupID        *uuid.UUID
 		Amount         int64
 		Operation      Operation
 		CreatedAt      time.Time
-		Sevice         *string
+		Sevice         *Service
+		PostСount      *int
+		UserID         *string
+	}
+
+	Withdrawal struct {
+		GroupId   uuid.UUID
+		PostСount int
+		Amount    int64
+		Service   Service
 	}
 
 	TransactionFilter struct {
@@ -21,10 +31,14 @@ type (
 		OrganizationID uuid.UUID
 	}
 
+	Service   string
 	Operation string
 )
 
 const (
 	DepositOperation Operation = "deposit"
 	DebitOperation   Operation = "debit"
+
+	BonusService Service = "bonus"
+	SbpService   Service = "sbp"
 )
