# internal/transport/rabbit/entity/payment.go
@@ -1,20 +1,23 @@
 package entity
 
 type Withdrawal struct {
-	OrganizationId string `json:"organizationId"`
-	Amount         int64  `json:"amount"`
-	Service        string `json:"service"`
+	GroupId   string `json:"groupId"`
+	PostСount string `json:"postСount"`
+	Amount    int64  `json:"amount"`
+	Service   string `json:"service"`
 }
 
 type WithdrawalSuccess struct {
-	OrganizationId string `json:"organizationId"`
-	Amount         int64  `json:"amount"`
-	Service        string `json:"service"`
+	GroupId   string `json:"groupId"`
+	PostСount string `json:"postСount"`
+	Amount    int64  `json:"amount"`
+	Service   string `json:"service"`
 }
 
 type WithdrawalFailure struct {
-	OrganizationId string `json:"organizationId"`
-	Amount         int64  `json:"amount"`
-	Service        string `json:"service"`
-	Error          string `json:"errors"`
+	GroupId   string `json:"groupId"`
+	PostСount string `json:"postСount"`
+	Amount    int64  `json:"amount"`
+	Service   string `json:"service"`
+	Error     string `json:"errors"`
 }
